tests/architecture/fixtures/invalid/order-command-boundaries/provider-order-writer.ts
export function invalidProviderOrderWriter(store: { replaceOrderCommandRecords(records: unknown[]): void }) {
  store.replaceOrderCommandRecords([]);
}
